--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,7 +11,7 @@
 }
 
 .bg-color-personal-info {
-     background-color: #f4f4f4;
+    background-color: #f4f4f4;
 }
 
 .ui-menu-color-home {
@@ -34,8 +34,10 @@
 
 }
 
- 
- 
+.bg-color-work-history {
+    background-color: #9b59b6;
+}
+
 /*-----------------------------------------Special paddings/margin/text */
 
 h1,
@@ -65,16 +67,18 @@ h4 {
 
 .section-column {
     display: table-cell;
-    padding:  0 30px 30px;
+    padding: 0 30px 30px;
     float: none;
 }
 
+.history-heading,
 .section-heading {
     font-family: "Exo", sans-serif;
     font-weight: 300;
     margin-top: 25px;
     margin-bottom: 40px;
 }
+
 /*-----------------------------------------Heading*/
 
 header {
@@ -159,6 +163,7 @@ header {
     letter-spacing: 2px;
 }
 
+
 /*-----------------------------------------Hover.css*/
 
 .hvr-sweep-to-bottom:before {
@@ -196,7 +201,7 @@ footer {
 }
 
 .social-links li a i {
-    width:  32px;
+    width: 32px;
     height: 32px;
     padding: 12px 0;
     border-radius: 50%;
@@ -206,7 +211,7 @@ footer {
     color: #fafafa;
     background-color: #8f8f8f;
     transition: all 0.35s ease-in-out;
-   -moz-transition: all 0.35s ease-in-out;
+    -moz-transition: all 0.35s ease-in-out;
     -webkit-transition: all 0.35s ease-in-out;
     -o-transition: all 0.35s ease-in-out;
 }
@@ -221,6 +226,7 @@ footer {
 
 
 /*-----------------------------------------Three Reasons*/
+
 .three-reasons-icon {
     font-size: 26px;
     color: #e67e22
@@ -230,7 +236,7 @@ footer {
     margin-bottom: 15px;
 }
 
-/*-----------------------------------------Three Reasons*/
+/*-----------------------------------------Personal Info*/
 
 .personal-info-item {
     margin-bottom: 20px;
@@ -240,7 +246,7 @@ footer {
 
 .personal-info-item .key,
 .personal-info-item .value {
-    padding-right: 8px; 
+    padding-right: 8px;
     display: inline-block;
 }
 
@@ -250,8 +256,8 @@ footer {
 }
 
 .personal-info-item .key {
-    width:  30%;
-    margin-right:  21px;
+    width: 30%;
+    margin-right: 21px;
     padding-top: 2px;
     vertical-align: top;
 }
@@ -263,4 +269,73 @@ footer {
 .personal-info-item .value {
     position: relative;
     width: 60%;
+}
+
+/*-----------------------------------------Skills*/
+
+.progress {
+    position: relative;
+    height: 25px;
+    margin-bottom: 4px;
+}
+
+.progress-type {
+    position: absolute;
+    left: 0px;
+    font-weight: 400;
+    padding: 3px 30px 2px 10px;
+    color: #fafafa;
+    background-color: rgba(25, 25, 25, 0.2);
+}
+
+.progress-section {
+    margin: 40px 20px;
+}
+
+/*-----------------------------------------Work History */
+
+.history-heading {
+    color: #fafafa;
+    margin-bottom: 50px;
+} /*added as an inline style to element as wasn't working*/
+
+.timeline-item {
+    padding: 4em 2em 0em 2em;
+    position: relative;
+    color: #fafafa;
+    border-left: 1px solid;
+}
+
+.timeline-item p {
+    padding: 0;
+    margin: 0;
+}
+
+.timeline-item:before {
+    content: attr(data-dates);
+    position: absolute;
+    left: 2.5em;
+    top: 3em;
+    display: block;
+    font-family: "Exo", sans-serif;
+    font-weight: 500;
+    font-size: 0.8em;
+    padding: 0;
+    margin: 0;
+}
+
+.timeline-item:after {
+    width: 12px;
+    height: 12px;
+    display: block;
+    top: 2.4em;
+    position: absolute;
+    left: -6px;
+    border-radius: 50%;
+    content: '';
+    background-color: #fafafa;
+}
+
+.history-items {
+    margin-bottom: 30px;
 }
