--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,6 +38,14 @@
     background-color: #9b59b6;
 }
 
+.bg-color-contact {
+    background-color: #fff;
+}
+
+.bg-color-contact {
+    background-color: #fff;
+}
+
 /*-----------------------------------------Special paddings/margin/text */
 
 h1,
@@ -297,7 +305,9 @@ footer {
 .history-heading {
     color: #fafafa;
     margin-bottom: 50px;
-} /*added as an inline style to element as wasn't working*/
+}
+
+/*added as an inline style to element as wasn't working*/
 
 .timeline-item {
     padding: 4em 2em 0em 2em;
@@ -338,4 +348,38 @@ footer {
 
 .history-items {
     margin-bottom: 30px;
+}
+
+/*-----------------------------------------Contact Form */
+
+.contact-heading {
+    font-family: "Exo", sans-serif;
+    font-weight: 300;
+    margin-top: 25px;
+    margin-bottom: 20px;
+}
+
+.center-form {
+    padding-bottom: 10px;
+    margin: 0 auto;
+    max-width: 70%;
+}
+
+button[type="submit"] {
+    margin-top: 15px;
+    margin-bottom: 20px;
+    color: #fafafa;
+    background-color: #ea4610;
+}
+
+/*-----------------------------------------Media Queries*/
+
+@media(min-width: 992px) {
+
+    .center-form {
+        padding-bottom: 30px;
+        min-height: 240px;
+        margin: 0 auto;
+        max-width: 50%;
+    }
 }
